# Robot-complet

./: readme.txt  器件采购表.xlsx  器件采购表2.xlsx
hardware/3D_model/: 3D打印轮子 .SLDPRT  opi.SLDPRT  stm32f4.SLDPRT  尾翼1.SLDPRT  架板.SLDPRT  架板1.SLDPRT  电池.SLDPRT  电池盖.SLDPRT  电池盖1.SLDPRT  电池罩.SLDPRT  盖板.SLDPRT  盖板1.SLDPRT  轮子.SLDPRT  铲2.SLDPRT  铲21.SLDPRT  零件1.SLDPRT  零件11.SLDPRT  零件2.SLDPRT
hardware/stm32f4/: CAR_BOARD_2024-07-15.pcbdoc
software/opi_board/: 环境依赖.txt
software/opi_board/robot/: CMakeLists.txt  apriltagDetect.cpp  apriltagDetect.hpp  main.cpp  main.hpp  radar.cpp  radar.hpp
software/opi_board/robot/tof/: example.c
software/stm32f4/battleCar_stm32/: .mxproject  battleCar_stm32.ioc
software/stm32f4/battleCar_stm32/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
software/stm32f4/battleCar_stm32/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
software/stm32f4/battleCar_stm32/MDK-ARM/: JLinkLog.txt  battleCar_stm32.uvguix.28410  battleCar_stm32.uvoptx  battleCar_stm32.uvprojx  startup_stm32f407xx.lst
software/stm32f4/battleCar_stm32/MDK-ARM/RTE/: RTE_Components.h
software/stm32f4/battleCar_stm32/MDK-ARM/battleCar_stm32/: adc.crf  adc.d  battleCar_stm32.axf  battleCar_stm32.build_log.htm  battleCar_stm32.hex  battleCar_stm32.htm  battleCar_stm32.lnp  battleCar_stm32.map  battleCar_stm32_battleCar_stm32.dep  dma.crf  dma.d  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_adc.crf  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.crf  stm32f4xx_hal_adc_ex.d  (+41 more)
